# tyuiu-bot

./: .env  .gitignore  Dockerfile  Readme.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
.gigaide/: gigaide.properties
.github/workflows/: deploy.yml
messages/: Share_contact_message.txt  error.txt  info.txt  subscribe.txt
migrations/: env.py
migrations/versions/: 2025_01_09_2040-6eed0d93ce35_initial_revision.py  2025_01_10_1220-1d0102e6c94f_update_message_table.py  2025_01_10_1225-82bb06766c12_bot_message_column.py  2025_01_20_0027-b133c0c7acf4_update_key.py  2025_01_21_2324-9ef88b0c18d4_contact_table.py  2025_03_09_1919-3a9143ea683a_rename_fields.py  2025_05_01_0130-7782ba4436c8_second_revision.py  2025_05_01_2050-7f83aa73b3d4_revision.py  2025_05_02_1324-b34512476652_create_user.py
nginx/: Dockerfile  init-nginx.sh  nginx.conf
nginx/templates/: nginx.conf.template
src/: config.py  constants.py  dto.py  gateways.py  ioc.py  services.py  settings.py  utils.py
src/apis/: __init__.py  auth_api.py  base.py  chat_api.py  chatbot_api.py
src/app/: bot.py  container.py  run.py
src/controllers/: __init__.py  chatbot_controller.py  chats_controller.py  notification_controller.py  users_controller.py
src/core/: dto.py  entities.py  interfaces.py  services.py
src/database/: context.py  manager.py  manager_provider.py
src/database_old/: manager.py  manager_provider.py
src/db/: database_manager.py
src/di/: container.py
src/dto/: __init__.py  chat_history.py  chat_history_paginated.py  (+7 more)
static/: scripts.js  style.css
(+357 files in other folders)
